Updated URI building syntax to utilize OOTB java.net.URI constructor builder.  Also implemented the use of Apache StringUtils.isEmpty() for checking null-ness, as per code review suggestion.  Still passes tests and works in basic auth, auth proxy, and non-auth proxy cases